Made servers scripts using lwjgl3ify